Added assignment history, some assignment logic for procedures